added image component

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <!-- CSS Variables -->
     <style>
       :root {
-        --primary-color: #000000;
-        --secondary-color: #6b7280;
-        --accent-color: #f59e0b;
+       
+        --color-action-primary: #027d3a;
+        --color-action-primary-hover: #1976D2 ;
+        --color-action-secondary: #26A69A;
+        --color-action-secondary-hover: #219488;
       }
     </style>
   </head>
